--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,10 +9,11 @@ data_ingestion:
 
 
 
-# prepare_base_model:
-#   root_dir: artifacts/prepare_base_model
-#   base_model_path: artifacts/prepare_base_model/base_model.h5
-#   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+prepare_knn_model:
+  root_dir: artifacts/prepare_knn_model
+  data_file_path: artifacts/data_ingestion/raw/complete_dataset_sample.pkl
+  knn_model_path: artifacts/prepare_knn_model/knn_model.h5
+  # updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
 
 
 
