--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,17 +3,20 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: D:\Resarch\2024\temporary\raw.zip
+  source_URL: D:\Nik\SSP\Data\woce_train_data.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
+data_preprocessing:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/woce_train_data/complete_dataset.pkl
 
 
-prepare_knn_model:
-  root_dir: artifacts/prepare_knn_model
-  data_file_path: artifacts/data_ingestion/raw/complete_dataset_sample.pkl
-  knn_model_path: artifacts/prepare_knn_model/knn_model.h5
-  # updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+# prepare_knn_model:
+#   root_dir: artifacts/prepare_knn_model
+#   data_file_path: artifacts/data_ingestion/raw/complete_dataset_sample.pkl
+#   knn_model_path: artifacts/prepare_knn_model/knn_model.h5
+#   # updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
 
 
 
